<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingBottom="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.view.MTextView
                android:id="@+id/cateTitleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:customTypeFace="@string/system_bold"
                tools:text="Title" />

            <com.view.MTextView
                android:id="@+id/cateDescTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:customTypeFace="@string/system_light"
                tools:text="desc" />
        </LinearLayout>

        <com.view.MTextView
            android:id="@+id/seeAllTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/appThemeColor_1"
            android:textSize="@dimen/_12ssp"
            app:customTypeFace="@string/system_semi_bold"
            tools:text="See all" />
    </LinearLayout>
</layout>