<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/mainArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:customTypeFace="@string/system_bold"
                tools:text="no type view" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/moreImg"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_11sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    app:srcCompat="@drawable/ic_arrow_title" />
            </LinearLayout>

            <com.view.MTextView
                android:id="@+id/seeAllTxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end"
                android:includeFontPadding="false"
                app:customTypeFace="@string/system_regular"
                tools:text="see all" />
        </LinearLayout>

        <com.view.MTextView
            android:id="@+id/subTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            app:customTypeFace="@string/system_medium"
            tools:text="sub title text" />
    </LinearLayout>
</layout>