<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:orientation="vertical">

        <com.view.MTextView
            android:id="@+id/headerTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_gravity="center"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/text23Pro_Dark"
            android:textSize="@dimen/_14ssp"
            app:customTypeFace="@string/system_bold"
            tools:text="@string/app_name" />

        <com.view.MTextView
            android:id="@+id/subHeaderTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textColor="@color/text23Pro_Dark"
            android:textSize="@dimen/_11ssp"
            app:customTypeFace="@string/system_regular"
            tools:text="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="top|center"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/deliveryRecycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </LinearLayout>
    </LinearLayout>
</layout>