<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/card_view_23_white_shadow">

            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/boxImage"
                    android:layout_width="@dimen/_38sdp"
                    android:layout_height="@dimen/_38sdp"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:orientation="vertical">

                    <com.view.MTextView
                        android:id="@+id/boxTitleTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:textAlignment="viewStart"
                        android:textColor="@color/text23Pro_Dark"
                        android:textSize="@dimen/_14ssp"
                        app:customTypeFace="@string/system_bold"
                        tools:text="@string/app_name" />

                    <com.view.MTextView
                        android:id="@+id/boxDescTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:textColor="@color/textSub23Pro_gray"
                        android:textSize="@dimen/_11ssp"
                        app:customTypeFace="@string/system_regular"
                        tools:text="@string/app_name" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>