<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/mainArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/cardViewBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <LinearLayout
                    android:id="@+id/llTextArea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.view.MTextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:includeFontPadding="false"
                        android:maxLines="3"
                        android:textAlignment="textStart"
                        android:textColor="@color/red"
                        app:customTypeFace="@string/system_bold"
                        tools:text="gdfgfhgfhg hfghgfgf fgfhgfhghf fghfghfghkfghk fhkgkhfghkf fhgkfhghk fhgkfhghkfgh fhgkfghfkghhk dfsdfhsdfhsdfgsdgfsdghf dfsdhgfjhsdfgdsg " />

                    <com.view.MTextView
                        android:id="@+id/txtSubTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:ellipsize="end"
                        android:textAlignment="textStart"
                        android:textColor="@color/red"
                        app:customTypeFace="@string/system_regular"
                        tools:text="gjdgdsfbgsdjgf sfgsdhgf usygrfeu sdbcdfdf dgfhdgfdgfvbgd dgfhgdfgdgf gjdgdsfbgsdjgf sfgsdhgf usygrfeu sdbcdfdf dgfhdgfdgfvbgd dgfhgdfgdgf gjdgdsfbgsdjgf sfgsdhgf usygrfeu sdbcdfdf dgfhdgfdgfvbgd dgfhgdfgdgf gjdgdsfbgsdjgf sfgsdhgf usygrfeu sdbcdfdf dgfhdgfdgfvbgd dgfhgdfgdgf gjdgdsfbgsdjgf sfgsdhgf usygrfeu sdbcdfdf dgfhdgfdgfvbgd dgfhgdfgdgf " />

                    <com.view.MTextView
                        android:id="@+id/txtBookNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/square_border"
                        android:paddingStart="@dimen/_7sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingEnd="@dimen/_7sdp"
                        android:paddingBottom="@dimen/_3sdp"
                        android:textColor="@color/red"
                        app:customTypeFace="@string/system_regular"
                        tools:text="@string/app_name" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sImgView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitEnd"
                    app:srcCompat="@mipmap/ic_no_icon" />
            </LinearLayout>

            <com.view.MTextView
                android:id="@+id/txtPromotionalTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curved_shape"
                android:backgroundTint="@color/appThemeColor_1"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_7sdp"
                app:customTypeFace="@string/system_semi_bold"
                tools:ignore="RelativeOverlap"
                tools:text="Promotional Tag" />
        </RelativeLayout>
    </RelativeLayout>
</layout>