<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/imageArea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_110sdp"
        android:layout_gravity="center"
        android:background="@color/appThemeColor_1"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_4sdp"
            app:srcCompat="@drawable/ic_feedback_new" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageArea"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/all_btn_height"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/txt_size_16"
                app:customTypeFace="@string/system_semi_bold"
                tools:text="@string/app_name" />


            <com.view.MTextView
                android:id="@+id/msgTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:paddingStart="@dimen/_7sdp"
                android:paddingEnd="@dimen/_7sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/text23Pro_Dark"
                android:textSize="@dimen/txt_size_14"
                app:customTypeFace="@string/system_regular"
                tools:text="@string/app_name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <com.view.MTextView
                android:id="@+id/skipTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/unselected_border"
                android:backgroundTint="@color/appThemeColor_1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/appThemeColor_1"
                android:textSize="@dimen/txt_size_16"
                android:visibility="invisible"
                app:customTypeFace="@string/system_medium"
                tools:text="Cancel" />

            <com.view.MTextView
                android:id="@+id/okTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/selected_border"
                android:backgroundTint="@color/appThemeColor_1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size_16"
                app:customTypeFace="@string/system_medium"
                tools:text="OK" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>