<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <FrameLayout
                android:id="@+id/dialogImgAlpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_6sdp">

                <LinearLayout
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@drawable/ic_circle"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_icon"
                        android:layout_width="@dimen/_27sdp"
                        android:layout_height="@dimen/_27sdp"
                        app:srcCompat="@drawable/ic_correct_2" />
                </LinearLayout>
            </FrameLayout>

            <com.view.MTextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:gravity="start|center"
                android:textAlignment="viewStart"
                android:textColor="#141414"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone"
                app:customTypeFace="@string/system_medium"
                tools:text="@string/app_name" />

            <com.view.MTextView
                android:id="@+id/msgTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_11sdp"
                android:layout_marginBottom="@dimen/_11sdp"
                android:gravity="start|center"
                android:textAlignment="viewStart"
                android:textColor="#646464"
                android:textSize="@dimen/_15ssp"
                app:customTypeFace="@string/system_light"
                tools:text="@string/app_name" />

            <include
                android:id="@+id/btn_type2"
                layout="@layout/btn_type_1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/all_btn_height"
                android:layout_gravity="bottom|center"
                android:layout_margin="@dimen/_10sdp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>